# crawler-generator-agent

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.logging-minimal.yml  docker-compose.logging.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: PROGRESS.md  SCRATCHPAD.md
.github/workflows/: ci.yml
config/: agents.yaml
docs/: OBSERVABILITY_REFACTORING_PLAN.md  architecture-patterns.md  auto_tool_descriptions_plan.md  development_plan.md  diagram.md  logging-architecture-plan.md  logging-readme.md  merge-plan-logging-branches.md  multi-model-configuration.md  observability.md  plan.md  selector_amendments.md  traces_ids.md
docs/refactoring/: 00-MASTER_PLAN.md  01-ARCHITECTURE.md  02-CODE_DUPLICATION.md  03-CODE_SMELLS.md  04-STATIC_ANALYSIS.md  05-TEST_COVERAGE.md  06-CI_ACTIONS.md  PHASE2_IMPLEMENTATION.md  PHASE2_PLAN.md
docs/tasks/: agent_user_context.md  class_based_contracts.md  context_and_user_prompt_fix_summary.md  extraction_refactor.md  extraction_refactor_plan.md  plan_generator_implementation_plan.md  plan_generator_refactor.md  state_persistance.md  state_persistence_plan.md  typing_refactor.md
examples/: README.md
examples/example_one/: plan.md
examples/example_one/extras/: crawler-blueprint.md  headfull-chrome.md  logging-standards.md  python-tips.md
infra/: es-index-template.sh  es_setup.py  kibana-dashboard.ndjson  otel-collector-config.yaml  setup-kibana.sh
infra/alembic/: env.py
infra/alembic/versions/: 001_create_memory_entries.py  002_create_sessions.py  003_create_agent_context_tables.py
logs/: agent_20251212_013448.jsonl  agent_20251212_013516.jsonl
plans_output/pism_pl/: plan.md  test.md
plans_output/pism_pl/data/: test_set.jsonl
plans_output/pism_pl_bak/: plan.md  test.md
plans_output/pism_pl_bak/data/: test_set.jsonl
plans_output/pism_pl_bak_2/: plan.md  test.md
plans_output/pism_pl_bak_2/data/: test_set.jsonl
plans_output/rand_org/: plan.md  test.md
plans_output/rand_org/data/: test_set.jsonl  x.json
scripts/: add_agent_response_content.py  ingest_logs.py
src/: __init__.py
src/agents/: __init__.py  accessibility_agent.py  base.py  browser_agent.py  data_prep_agent.py  discovery_agent.py  main_agent.py  plan_generator_agent.py  prompts.py  result.py  selector_agent.py
src/contracts/: __init__.py  exceptions.py  schema_parser.py  validation_registry.py
src/contracts/schemas/accessibility_agent/: input.schema.json  output.schema.json
src/contracts/schemas/data_prep_agent/: input.schema.json  output.schema.json
src/contracts/schemas/discovery_agent/: input.schema.json  output.schema.json
src/contracts/schemas/main_agent/: input.schema.json  output.schema.json
src/core/: browser.py  component_models.py  config.py  default_models.py  exceptions.py  html_cleaner.py  json_parser.py  llm.py  log_config.py  log_context.py  log_outputs.py  model_registry.py  pii_redactor.py  sampling.py  structured_logger.py
src/infrastructure/: __init__.py  container.py
src/models/: __init__.py  agent_instance.py  context_event.py  memory.py  session.py
src/observability/: __init__.py  config.py  context.py  decorators.py  emitters.py  handlers.py  outputs.py  schema.py  serializers.py  tracer.py
src/prompts/: __init__.py  provider.py  registry.py  template.py  template_renderer.py
src/prompts/templates/: __init__.py  agents.py  dynamic.py  extraction.py  selectors.py
src/repositories/: __init__.py  base.py  context_repository.py  inmemory.py  sqlalchemy.py
src/services/: __init__.py  context_service.py  memory_service.py  session_service.py
src/tools/: __init__.py  base.py  browser.py  crawler_config_generator.py  extraction.py  file.py  http.py  memory.py  orchestration.py  plan_draft_provider.py  plan_generator.py  random_choice.py  result.py  selector.py  selector_extraction.py  selector_sampling.py  supervisor.py  validation.py
src/tools/agent_tools/: __init__.py  agent_tool.py  describe_input_contract.py  describe_output_contract.py  generate_uuid.py  prepare_validation.py  validate_response.py
src/utils/: __init__.py  schema_merger.py  selector_executor.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_json_parser.py  test_llm.py
tests/agents/: test_agent_validation_migration.py  test_base_agent_contracts.py  test_main_agent_contracts.py
tests/contracts/: __init__.py  test_agent_tool.py  test_exceptions.py  test_schema_migration.py  test_schema_parser.py  test_templates.py  test_validation_registry.py
tests/contracts/tools/: __init__.py  test_describe_input_contract.py  test_describe_output_contract.py  test_generate_uuid.py  test_prepare_validation.py  test_validate_response.py
tests/integration/: __init__.py  test_contract_workflow.py
tests/test_agents/: test_base.py  test_isolated_memory.py  test_result.py
tests/test_integration/: __init__.py  test_extraction_flow.py  test_memory_architecture.py
tests/test_observability/: test_context.py  test_decorators.py  test_serializers.py
tests/test_prompts/: __init__.py  test_prompt_provider.py
tests/test_repositories/: test_context_repository.py
tests/test_tools/: test_memory.py  test_orchestration.py  test_result.py  test_validation.py
tests/test_utils/: test_schema_merger.py  test_selector_executor.py
(+72 files in other folders)
