[project]
name = "crawler-agent"
version = "0.1.0"
description = "Self-creating web crawler agent using AI"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    # JSON Schema validation for contract system
    "jsonschema>=4.20.0",
    # YAML config loading
    "pyyaml>=6.0.0",
    # OpenTelemetry for distributed tracing
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
    # SQLAlchemy ORM (used for model objects)
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]
mysql = [
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
migrations = [
    "alembic>=1.13.0",
]

[project.scripts]
crawler-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify (simplifications)
    "RUF",    # Ruff-specific rules
]
ignore = ["E501"]  # Line too long handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"main.py" = ["E402"]  # Imports after dotenv.load_dotenv() is intentional

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = [
    "override",      # Allow flexible tool execute() signatures
    "attr-defined",  # Singleton pattern dynamic attributes
    "misc",          # Various edge cases (type declarations in __new__)
    "union-attr",    # JSON parsing returns dict | list, we handle it
    "arg-type",      # Flexible argument types in tools
    "return-value",  # Decorator return types, sorted() key functions
]
exclude = [
    "tests/",
    "infra/",
    ".venv/",
]

# SQLAlchemy models and related services need special handling
[[tool.mypy.overrides]]
module = "src.models.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.repositories.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.services.session_service"
ignore_errors = true

